welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: error: ';' expected but '{' found.
			}while(!colIni == c){
                                            ^